--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,7 +11,7 @@ pbuilder_prepare_project( 2 6 7 )
 cmake_policy (SET CMP0011 NEW)
 
 # Egg file version
-set( Egg_VERSION "3.0.0b" )
+set( Egg_VERSION "3.0.0b3" )
 
 set( Monarch_BUILD_MONARCH2 FALSE CACHE BOOL "Build Monarch2 library (requires Protobuf)" )
 set( Monarch_BUILD_MONARCH3 TRUE CACHE BOOL "Build Monarch3 library (requires HDF5)" )
