--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,10 +14,12 @@ pbuilder_prepare_project( 2 6 7 )
 cmake_policy (SET CMP0011 NEW)
 
 # Egg file version
-set( Egg_VERSION "3.0.0b3" )
+set( Egg_VERSION "3.0.0b4" )
 
 set( Monarch_BUILD_MONARCH2 FALSE CACHE BOOL "Build Monarch2 library (requires Protobuf)" )
 set( Monarch_BUILD_MONARCH3 TRUE CACHE BOOL "Build Monarch3 library (requires HDF5)" )
+
+set( Monarch_ENABLE_DOC_BUILD FALSE CACHE BOOL "Enable the options to build the documentation (requires Doxygen and Sphynx)" )
 
 ########################
 # monarch dependencies #
@@ -81,7 +83,8 @@ pbuilder_variables_for_parent()
 # documentation #
 #################
 
-# Doxygen documentation can be built with "make doc" (it's not included with the "all" make target)
-# By default it builds in the source tree.
-add_subdirectory (Documentation)
-
+if( Monarch_ENABLE_DOC_BUILD )
+    # Doxygen documentation can be built with "make doc" (it's not included with the "all" make target)
+    # By default it builds in the source tree.
+    add_subdirectory (Documentation)
+endif( Monarch_ENABLE_DOC_BUILD )
