--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,6 @@
-cmake_minimum_required( VERSION 2.8 )
+# Minimum cmake verison 3.0 required by the way CMake handles rpath information on Mac OSX.
+cmake_minimum_required (VERSION 3.0)
+cmake_policy (SET CMP0042 NEW)
 
 #########
 # setup #
