--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,10 +33,11 @@ if( GIT_FOUND )
 endif( GIT_FOUND )
 
 if( Monarch_BUILD_MONARCH3 )
-    find_package( HDF5 REQUIRED COMPONENTS CXX )
+    find_package( HDF5 REQUIRED COMPONENTS C CXX )
     include_directories( BEFORE ${PROJECT_SOURCE_DIR}/Monarch3 ${PROJECT_BINARY_DIR} )
     include_directories( BEFORE ${HDF5_INCLUDE_DIR} )
-    pbuilder_add_ext_libraries( ${HDF5_CXX_LIBRARIES} )
+    pbuilder_add_ext_libraries( ${HDF5_C_LIBRARY} )
+    pbuilder_add_ext_libraries( ${HDF5_CXX_LIBRARY} )
 endif( Monarch_BUILD_MONARCH3 )
 
 if( Monarch_BUILD_MONARCH2 )
@@ -51,7 +52,6 @@ endif( Monarch_BUILD_MONARCH2 )
 add_subdirectory( libthorax )
 pbuilder_add_submodule_libraries( ${libthorax_LIBRARIES} )
 include_directories( ${libthorax_DEP_INCLUDE_DIRS} )
-message(STATUS "from monarch, libthorax dep include dirs: ${libthorax_DEP_INCLUDE_DIRS}")
 # add to the RPATH to be used when installing, but only if it's not a system directory
 list( FIND CMAKE_PLATFORM_IMPLICIT_LINK_DIRECTORIES "${libthorax_LIBRARY_DIR}" isSystemDir )
 if ( "${isSystemDir}" STREQUAL "-1" )
