--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,8 @@ if( Monarch_BUILD_MONARCH3 )
     find_package( HDF5 REQUIRED COMPONENTS C CXX )
     include_directories( BEFORE ${PROJECT_SOURCE_DIR}/Monarch3 ${PROJECT_BINARY_DIR} )
     include_directories( BEFORE ${HDF5_INCLUDE_DIR} )
+    # It seems that all 3 of the following lines are needed to make Monarch compile on both Mac/Linux and Windows
+    pbuilder_add_ext_libraries( ${HDF5_CXX_LIBRARIES} )
     pbuilder_add_ext_libraries( ${HDF5_C_LIBRARY} )
     pbuilder_add_ext_libraries( ${HDF5_CXX_LIBRARY} )
 endif( Monarch_BUILD_MONARCH3 )
