--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,9 @@ cmake_minimum_required (VERSION 3.0)
 cmake_policy( SET CMP0048 NEW ) # version in project()
 project( Monarch VERSION 3.2.3 )
 
-list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake)
+list( APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/Scarab/cmake)
 
-include( PackageBuilder)
+include( PackageBuilder )
 pbuilder_prepare_project()
 
 # Egg file version
