--- a/Monarch3/CMakeLists.txt
+++ b/Monarch3/CMakeLists.txt
@@ -8,7 +8,6 @@ set( MONARCH3_HEADERFILES
     M3Exception.hh
     M3Header.hh
     M3IToA.hh
-    M3Logger.hh
     M3MemberVariable.hh
     M3Monarch.hh
     M3Record.hh
@@ -20,7 +19,6 @@ set( MONARCH3_SOURCEFILES
     M3Exception.cc
     M3Header.cc
     M3IToA.cc
-    M3Logger.cc
     M3Monarch.cc
     M3Record.cc
     M3Stream.cc
@@ -33,36 +31,42 @@ set( MONARCH3_HEADERFILES
     ${PROJECT_BINARY_DIR}/M3Version.hh
 )
 
-add_library( Monarch3 ${MONARCH3_SOURCEFILES} )
-target_link_libraries( Monarch3 ${EXTERNAL_LIBRARIES} )
+pbuilder_library( Monarch3 MONARCH3_SOURCEFILES "" )
 
 pbuilder_install_headers( ${MONARCH3_HEADERFILES} )
-pbuilder_install_libraries( Monarch3 )
 
 
 ########################
 # monarch3 executables #
 ########################
 
-#add_executable( Monarch3Dump Monarch3Dump.cpp )
-#target_link_libraries( Monarch3Dump Monarch3 ${EXTERNAL_LIBRARIES})
+if( Monarch_ENABLE_EXECUTABLES )
 
-add_executable( Monarch3Info Monarch3Info.cc )
-target_link_libraries( Monarch3Info Monarch3 ${EXTERNAL_LIBRARIES})
+    set( lib_dependencies 
+        Monarch3
+    )
+    
+    set( programs
+        Monarch3Info
+        #Monarch3Dump
+    )
+    
+    pbuilder_executables( programs lib_dependencies )
 
-add_executable( Monarch3ReadTest Monarch3ReadTest.cc )
-target_link_libraries( Monarch3ReadTest Monarch3 ${EXTERNAL_LIBRARIES})
+endif( Monarch_ENABLE_EXECUTABLES )
 
-add_executable( Monarch3WriteTest Monarch3WriteTest.cc )
-target_link_libraries( Monarch3WriteTest Monarch3 ${EXTERNAL_LIBRARIES})
+if( Monarch_ENABLE_TESTING )
 
-#add_executable( Monarch3TimeCheck Monarch3TimeCheck.cpp )
-#target_link_libraries( Monarch3TimeCheck Monarch3 ${EXTERNAL_LIBRARIES})
-
-pbuilder_install_executables (
-    #Monarch3Dump
-    Monarch3Info
-    Monarch3ReadTest
-    Monarch3WriteTest
-    #Monarch3TimeCheck
-)
+    set( lib_dependencies 
+        Monarch3
+    )
+    
+    set( programs
+        Monarch3ReadTest
+        Monarch3WriteTest
+        #Monarch3TimeCheck
+    )
+    
+    pbuilder_executables( programs lib_dependencies )
+    
+endif( Monarch_ENABLE_TESTING )
