--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,12 +25,28 @@ set( Monarch_ENABLE_DOC_BUILD FALSE CACHE BOOL "Enable the options to build the 
 # monarch dependencies #
 ########################
 
+########
+# Scarab
+########
+
+pbuilder_add_submodule( Scarab Scarab/library )
+
+
+#####
+# Git
+#####
+
 # if git is used, get the commit SHA1
 find_package( Git )
 if( GIT_FOUND )
     execute_process( COMMAND ${GIT_EXECUTABLE} rev-parse -q HEAD  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} OUTPUT_VARIABLE Monarch_GIT_COMMIT  OUTPUT_STRIP_TRAILING_WHITESPACE )
     execute_process( COMMAND ${GIT_EXECUTABLE} describe --tags --long  WORKING_DIRECTORY ${PROJECT_SOURCE_DIR} OUTPUT_VARIABLE Monarch_GIT_DESCRIBE  OUTPUT_STRIP_TRAILING_WHITESPACE )
 endif( GIT_FOUND )
+
+
+######
+# HDF5
+######
 
 if( Monarch_BUILD_MONARCH3 )
     find_package( HDF5 REQUIRED COMPONENTS C CXX )
@@ -41,6 +57,11 @@ if( Monarch_BUILD_MONARCH3 )
     pbuilder_add_ext_libraries( ${HDF5_C_LIBRARY} )
     pbuilder_add_ext_libraries( ${HDF5_CXX_LIBRARY} )
 endif( Monarch_BUILD_MONARCH3 )
+
+
+##########
+# Protobuf
+##########
 
 if( Monarch_BUILD_MONARCH2 )
     find_package( Protobuf REQUIRED )
