--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ pbuilder_prepare_project()
 
 # Egg file version
 set( Egg_VERSION "3.1.0" )
+add_definitions( -DEgg_VERSION=${Egg_VERSION} )
 
 set( Monarch_BUILD_MONARCH2 FALSE CACHE BOOL "Build Monarch2 library (requires Protobuf)" )
 set( Monarch_BUILD_MONARCH3 TRUE CACHE BOOL "Build Monarch3 library (requires HDF5)" )
