Added a write-speed test program, Monarch3WriteSpeedTest.

--- a/Monarch3/CMakeLists.txt
+++ b/Monarch3/CMakeLists.txt
@@ -64,6 +64,7 @@ if( Monarch_ENABLE_TESTING )
     set( programs
         Monarch3ReadTest
         Monarch3WriteTest
+        Monarch3WriteSpeedTest
         #Monarch3TimeCheck
     )
     
