--- a/Monarch3/CMakeLists.txt
+++ b/Monarch3/CMakeLists.txt
@@ -35,8 +35,7 @@ set( MONARCH3_SOURCEFILES
 pbuilder_library(
     TARGET Monarch3
     SOURCES ${MONARCH3_SOURCEFILES}
-    PUBLIC_EXTERNAL_LIBRARIES ${PUBLIC_EXT_LIBS}
-    #PRIVATE_EXTERNAL_LIBRARIES ${PRIVATE_EXT_LIBS}
+    PUBLIC_EXTERNAL_LIBRARIES ${PUBLIC_EXT_LIBS_M3}
     COMPILE_DEFINITIONS ${HDF5_DEFINITIONS}
 )
 
