--- a/Monarch3/Executables/CMakeLists.txt
+++ b/Monarch3/Executables/CMakeLists.txt
@@ -39,9 +39,11 @@ if( Monarch_ENABLE_TESTING )
     
     pbuilder_executables( 
         SOURCES ${sources}
-        TARGETS_VAR Monarch3_PROGRAMS
+        TARGETS_VAR Monarch3_TEST_PROGRAMS
         PROJECT_LIBRARIES ${lib_dependencies}
     )
+
+    list( APPEND Monarch3_PROGRAMS ${Monarch3_TEST_PROGRAMS} )
 
 endif( Monarch_ENABLE_TESTING )
 
