Very temporary executables to demonstrate and practice the use of z5

--- a/Monarch4/CMakeLists.txt
+++ b/Monarch4/CMakeLists.txt
@@ -2,6 +2,9 @@
 # monarch4 library #
 ####################
 
+add_subdirectory( Temp )
+return()
+
 set( MONARCH4_HEADERFILES
     M4Constants.hh
     M4DataInterface.hh
