work in progress   - first clean build writeMonarch   - massive commented-out code to focus development into small pieces

--- a/Monarch4/Executables/CMakeLists.txt
+++ b/Monarch4/Executables/CMakeLists.txt
@@ -11,7 +11,7 @@ if( Monarch_ENABLE_EXECUTABLES )
     )
     
     set( sources
-        M4Info.cc
+        #M4Info.cc
         #Monarch4Dump.cc
     )
     
